--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,20 @@
             <version>4.3.10.Final</version>
             <!--            <scope>provided</scope>-->
         </dependency>
+        
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>6.1.0.jre8</version>
+        </dependency>
+        
+        <!--
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
+        -->
         <!-- LOGGING DEPENDENCIES - LOG4J -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
